# Stock2Vec-graph-experiment

./: .gitignore  plan.txt  pyproject.toml
data/: correlation.py  create_dummy_db.py  dataset.py  macro.py  prep_features.py  prep_features_daily.py  pull_alpaca_daily.py  pull_alpaca_merged.py
evals/: encode.py  metrics.py  neighbor_quality.py  oos_backtest.py  plots.py  run_evals.py
models/: encoder.py  gnn.py  models.py  temporal.py  utils.py
training/: losses.py  trainer.py
vector_db/: store.py
