[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "stock2vec"
version = "0.1.0"
description = "Time series embeddings for equity movement using graph neural networks"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "torch>=2.0",
    "torch-geometric>=2.3",
    "lancedb>=0.6",
    "pyarrow>=12",
    "scipy>=1.10",
    "scikit-learn>=1.2",
    "alpaca-py>=0.24",
    "requests>=2.28",
    "rich>=13",
    "matplotlib>=3.7",
    "umap-learn>=0.5",
]

[tool.setuptools.packages.find]
include = ["stock2vec*"]
